--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "3d-art-portfolio",
+  "homepage": "https://areebuzair.github.io/BlenderArtPortfolio/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,6 +13,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0",
     "require": "^2.4.20",
     "vite-plugin-require": "^1.1.11"
   },
